# resume-review-ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: check.yml
backend/: .dockerignore  Dockerfile  alembic.ini  mcp_server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_resumes_table.py  002_add_resume_version.py
backend/app/: config.py  database.py  main.py
backend/app/core/: __init__.py  auth.py  compile.py  resume_ops.py
backend/app/mcp/: __init__.py  auth_middleware.py  db.py  server.py  tools.py
backend/app/middleware/: auth.py  mcp_path.py
backend/app/models/: __init__.py  resume.py
backend/app/routes/: compile.py  resumes.py
backend/app/schemas/: resume.py
backend/tests/: conftest.py  test_auth.py  test_compile.py  test_core_auth.py  test_core_compile.py  test_core_resume_ops.py  test_database.py  test_mcp_mount.py  test_mcp_oauth_discovery.py  test_mcp_server.py  test_resumes.py
docs/: CLAUDE.md  INDEX.md  architecture.md  design-system.md  setup.md
docs/decisions/: 001-server-side-latex.md  002-xelatex-engine.md  003-logto-auth.md  004-fastapi-single-backend.md  005-texlive-internal-only.md  006-store-latex-only.md  007-sub-resumes-forked-copies.md  008-codemirror-over-monaco.md  009-tailwind-v4-css-first.md  (+1 more)
frontend/: .dockerignore  CLAUDE.md  Dockerfile  eslint.config.mjs  middleware.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
scripts/: run.sh
texlive/: Dockerfile  package.json  server.js
(+95 files in other folders)
